crates/stc_ts_file_analyzer/tests/pass/exprs/object/key/4.ts
// @target: es5
var s: string;
var n: number;
var a: any;
var v = {
    set [s + n](v) { },
}