crates/stc_ts_file_analyzer/tests/errors/conformance/expressions/arrayLiterals/1.ts
// Type '[]' is not assignable to type '[any, any, any]'. Source has 0 element(s) but target requires 3.ts(2322)

var a0: [any, any, any] = []; // Error